--- a/config/locales/errors/en.yml
+++ b/config/locales/errors/en.yml
@@ -186,10 +186,6 @@ en:
           attributes:
             miam_attended:
               inclusion: Select yes if you’ve attended a MIAM
-        steps/miam/mediator_exemption_form:
-          attributes:
-            miam_mediator_exemption:
-              inclusion: Select yes if you have an exemption from a mediator
         steps/miam/certification_upload_form:
           attributes:
             miam_certificate_document:
@@ -603,6 +599,18 @@ en:
             misc:
               blank: *blank_exemptions_error
               none_not_exclusive: *none_not_exclusive_error
+        steps/miam_exemptions/exemption_details_form:
+          attributes:
+            exemption_details:
+              blank: Please provide details of exemptions from attending a MIAM
+        steps/miam_exemptions/exemption_reasons_form:
+          attributes:
+            attach_evidence:
+              inclusion: Select yes or no
+        steps/miam_exemptions/exemption_upload_form:
+          attributes:
+            exemption_document:
+              <<: *DOCUMENT_UPLOAD_ERRORS
         steps/application/previous_proceedings_form:
           attributes:
             children_previous_proceedings:
