--- a/config/locales/pdf/en.yml
+++ b/config/locales/pdf/en.yml
@@ -116,7 +116,7 @@ en:
       statement_of_truth: 16. Statement of truth
       ### C1A ###
       c1a_applicants_details: Section 1 - About you (the person completing this form)
-      c1a_abuse_details: Section 2 - Details of domestic violence / abuse
+      c1a_abuse_details: Section 2 - Details of domestic abuse
       c1a_abduction: Section 3 - Abduction
       c1a_children_other_abuse: Section 4 - Other concerns about the child(ren)
       c1a_protection_orders: Section 5 - Steps or orders required to protect the safety and wellbeing
@@ -200,7 +200,7 @@ en:
       answers:
         <<: *FORMALISE_ARRANGEMENTS
     domestic_abuse:
-      question: Any form of domestic violence or abuse?
+      question: Any form of domestic abuse?
       answers:
         <<: *YESNO
     children_abduction:
@@ -393,16 +393,25 @@ en:
       answers:
         <<: *YESNO
         not_applicable: *not_applicable
-    miam_mediator_exemption:
-      question: Has a family mediator informed you that a mediator’s exemption applies, and you do not need to attend a MIAM?
-      answers:
-        <<: *YESNO
-        not_applicable: *not_applicable
     miam_attended:
       question: Have you attended a MIAM?
       answers:
         <<: *YESNO
         not_applicable: *not_applicable
+    exemption_details:
+      question: Details of exemptions from attending a MIAM
+      absence_answer: *not_applicable
+    exemption_reasons:
+      question: Reasons for not providing evidence for a MIAM exemption
+      absence_answer: *not_applicable
+    attach_evidence:
+      question: Are you or the prospective party able to provide the required evidence to support a MIAM exemption claim?
+      answers:
+        <<: *YESNO
+    exemption:
+      question: *details
+      answer: "[ File(s) uploaded with application ]"
+      absence_answer: *not_applicable
     permission_sought:
       question: Have you applied to the court for permission to make this application?
       answers:
