try new token location and add fix typo

--- a/config/locales/cya/en.yml
+++ b/config/locales/cya/en.yml
@@ -255,8 +255,8 @@ en:
         court_bound_over: A court order binding a prospective party over in connection with a domestic abuse offence
         court_protective_injunction: A relevant protective injunction
         court_undertaking: An undertaking given in England and Wales under section 46 or 63E of the Family Law Act 1996 (or given in Scotland or Northern Ireland in place of a protective injunction) by a prospective party, provided that a cross-undertaking relating to domestic violence or abuse was not given by another prospective party
-        court_finding_of_fact: A copy of a finding of fact, made in proceedings in the United Kingdom, that there has been domestic violence by a prospective party
-        court_expert_report: An expert report produced as evidence in proceedings in the United Kingdom for the benefit of a court or tribunal confirming that a person with whom a prospective party is or was in a family relationship, was assessed as being, or at risk of being, a victim of domestic violence by that prospective party
+        court_finding_of_fact: A copy of a finding of fact, made in proceedings in the United Kingdom, that there has been domestic abuse by a prospective party
+        court_expert_report: An expert report produced as evidence in proceedings in the United Kingdom for the benefit of a court or tribunal confirming that a person with whom a prospective party is or was in a family relationship, was assessed as being, or at risk of being, a victim of domestic abuse by that prospective party
         specialist_examination: A letter or report from an appropriate health professional confirming an examination
         specialist_referral: A letter or report from an appropriate health professional confirming a referral
         local_authority_marac: A letter from any person who is a member of a multi-agency risk assessment conference (or other suitable local safeguarding forum) confirming that a prospective party, or a person with whom that prospective party is personally connected, is or has been at risk of harm from domestic abuse by another prospective party
