--- a/config/locales/pdf/en.yml
+++ b/config/locales/pdf/en.yml
@@ -420,7 +420,7 @@ en:
       question: Reasons for not providing evidence for a MIAM exemption
       absence_answer: *not_applicable
     attach_evidence:
-      question: Are you or the prospective party able to provide the required evidence to support a MIAM exemption claim?
+      question: Are you able to attach the required evidence to support a MIAM exemption claim?
       answers:
         <<: *YESNO
     exemption:
