--- a/config/locales/cya/en.yml
+++ b/config/locales/cya/en.yml
@@ -318,7 +318,7 @@ en:
       answers:
         not_applicable: "[Not applicable in this case]"
     attach_evidence:
-      question: Are you or the prospective party able to provide the required evidence to support a MIAM exemption claim?
+      question: Are you able to attach the required evidence to support a MIAM exemption claim?
       answers:
         <<: *YESNO
     ### Safety concerns ###
