--- a/config/locales/cya/en.yml
+++ b/config/locales/cya/en.yml
@@ -312,7 +312,7 @@ en:
     exemption_details:
       question: Details of exemptions from attending a MIAM
     exemption_reasons:
-      question: Evidence of MIAM exemption
+      question: Reasons for not providing evidence for a MIAM exemption
     exemption:
       question: Evidence for a MIAM exemption
       answers:
