--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -275,6 +275,10 @@ en:
             <p class="govuk-body">For example, if you believe the other people in the case pose a risk to you or your children, you can ask the court to keep your contact details private.</p>
             <p class="govuk-body"><strong>Please note:</strong> you will need to make sure that any form or document, either completed by you now, or at a later date, for use in court <strong>does not</strong> contain the information you wish to keep private. This includes documents received from other people e.g. medical reports or financial statements etc.</p>
             <p class="govuk-body">The court staff are not able to check the documents you submit to the court for any unintentional disclosure of your contact details.</p>
+      refuge:
+        edit:
+          page_title: Are you currently resident in a refuge?
+          heading: "Are you currently resident in a refuge?"
       privacy_summary:
         show:
           page_title: Contact details confidentiality
@@ -1598,6 +1602,10 @@ en:
           email: Email address
           mobile: Mobile phone number
           home_phone: Home phone number
+      steps_applicant_refuge_form:
+        refuge_options:
+          'yes': 'Yes'
+          'no': 'No'
       steps_applicant_personal_details_form:
         <<: *PERSONAL_DETAILS_FIELDS
         previous_name: Enter your previous name
