Add spec and feature tests, missing translation and confidential time release

--- a/config/locales/pdf/en.yml
+++ b/config/locales/pdf/en.yml
@@ -113,6 +113,14 @@ en:
       other_parties_details: 12. Others who should be given notice
       solicitor_details: 13. Solicitor’s details
       statement_of_truth: 14. Statement of truth
+      ### C1A ###
+      c1a_applicants_details: Section 1 - About you (the person completing this form)
+      c1a_abuse_details: Section 2 - Details of domestic abuse
+      c1a_abduction: Section 3 - Abduction
+      c1a_children_other_abuse: Section 4 - Other concerns about the child(ren)
+      c1a_protection_orders: Section 5 - Steps or orders required to protect the safety and wellbeing
+      c1a_statement_of_truth: Section 6 - Statement of truth
+      c1a_attending_court: Section 7 - Attending the court
     section_headers:
       children: 1. The Child(ren)
       miam_requirement: 2. Requirement to attend a Mediation, Information and Assessment Meeting (MIAM)
