Add validation alert for attach evidence on check your answers page

--- a/config/locales/errors/en.yml
+++ b/config/locales/errors/en.yml
@@ -132,6 +132,8 @@ en:
               blank: You must choose a file to upload
             consent_order:
               blank: You must choose a file to upload
+            attach_evidence:
+              blank: You must select an option for MIAM evidence exemption
 
   activemodel:
     errors:
