Absent answer for exemption detail in sections

--- a/config/locales/cya/en.yml
+++ b/config/locales/cya/en.yml
@@ -313,6 +313,8 @@ en:
         misc_access4: The prospective applicant cannot attend a MIAM because the prospective applicant is (i) in prison or any other institution in which the prospective applicant is required to be detained and facilities cannot be made available for them to attend a MIAM online or by video link; or (ii) subject to conditions of bail that prevent contact with the other person; or (iii) subject to a licence with a prohibited contact requirement in relation to the other person
     exemption_details:
       question: Details of exemptions from attending a MIAM
+      answers:
+        not_applicable: "[Not applicable in this case]"
     exemption_reasons:
       question: Evidence of MIAM exemption
     exemption:
