--- a/config/locales/cya/en.yml
+++ b/config/locales/cya/en.yml
@@ -511,6 +511,8 @@ en:
       question: Do the other people named in this application (the respondents) know any of your contact details?
     person_contact_details_private:
       question: Do you want to keep %{name} details private from the other people named in the application (the respondents)?
+    other_party_refuge:
+      question: Is %{name} currently resident in a refuge?
     refuge:
       question: Are you currently resident in a refuge?
     person_full_name:
